<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="Typos">
    <string name="app_name">Carrinho de Compras</string>
    <string name="empty" />
    <string name="one">1</string>
    <string name="navigation_drawer_open">Abrir menu lateral</string>
    <string name="navigation_drawer_close">Fechar menu lateral</string>
    <string name="nav_share">Compartilhar App</string>
    <string name="new_cart">Novo carrinho</string>
    <string name="new_list">Nova lista</string>
    <string name="send_cart">Enviar carrinho</string>
    <string name="send_list">Enviar lista</string>
    <string name="clear_cart">Limpar carrinho</string>
    <string name="carts_history">Histórico / arquivados</string>
    <string name="lists_history">Listas arquivadas</string>
    <string name="clear_list">Limpar lista</string>
    <string name="clear_fields">Limpar campos</string>
    <string name="nav_feedback">Enviar feedback</string>
    <string name="nav_archived">Arquivados</string>
    <string name="cart">Carrinho</string>
    <string name="list">Lista</string>
    <string name="purchase_list">Lista de compras</string>
    <string name="premium">Premium</string>
    <string name="compare">Comparar</string>
    <string name="comparator">Comparador</string>
    <string name="feedback">Feedback</string>
    <string name="more">Mais</string>
    <string name="price_comparison">Comparador de preços</string>
    <string name="shopping_list">Lista de compras</string>
    <string name="notifications">Notificações</string>
    <string name="about_app">Sobre o app</string>
    <string name="rate_app">Avaliar app</string>
    <string name="remove_ads">Remover anúncios</string>
    <string name="more_options">Mais ações</string>
    <string name="delete_cart">Excluir carrinho</string>
    <string name="delete_list">Excluir lista</string>
    <string name="archived_carts">Carrinhos arquivados</string>
    <string name="archived_lists">Listas arquivadas</string>
    <string name="archived_list">Lista arquivada</string>
    <string name="archived_cart">Carrinho arquivado</string>
    <string name="search_products">Procurar produtos</string>
    <string name="search_carts">Procurar carrinhos</string>
    <string name="search_lists">Procurar listas</string>
    <string name="search_no_results">Nenhum resultado para \"%1$s\"</string>
    <string name="product_details">%s unidade%s a %s cada</string>
    <string name="product_details_no_price">%s unidade%s</string>
    <string name="products_empty">Nenhum produto adicionado</string>
    <string name="carts_archive_empty">Nenhum carrinho arquivado</string>
    <string name="lists_archive_empty">Nenhuma lista arquivada</string>
    <string name="lists_archive_searching">Pesquisando por:</string>
    <string name="carts_empty">Nenhum carrinho criado</string>
    <string name="lists_empty">Nenhuma lista criada</string>
    <string name="name">Nome</string>
    <string name="email">E-mail</string>
    <string name="create_cart">Criar novo carrinho</string>
    <string name="create_list">Criar nova lista</string>
    <string name="cart_name">Nome do carrinho (opcional)</string>
    <string name="list_name">Nome da lista (opcional)</string>
    <string name="create_cart_success">Carrinho criado com sucesso!</string>
    <string name="create_list_success">Lista criada com sucesso!</string>
    <string name="create_cart_needed">Você precisa criar um carinho para começar:</string>
    <string name="create_list_needed">Você precisa criar uma lista para começar:</string>
    <string name="create_cart_notice">ATENÇÃO! Ao criar um novo carrinho, o atual será arquivado automaticamente.</string>
    <string name="create_list_notice">ATENÇÃO! Ao criar uma nova lista de compras, a atual será arquivada automaticamente.</string>
    <string name="quantity">Quantidade</string>
    <string name="quantity_default">1</string>
    <string name="price">Preço unitário</string>
    <string name="product_added">Produto adicionado!</string>
    <string name="product_edited">Produto alterado!</string>
    <string name="add_product">Adicionar produto</string>
    <string name="edit_product">Alterar produto</string>
    <string name="add">Adicionar</string>
    <string name="save">Salvar</string>
    <string name="confirm">Confirmar</string>
    <string name="cancel">Cancelar</string>
    <string name="clear">Limpar</string>
    <string name="discard">Descartar</string>
    <string name="confirmation">Confirmação</string>
    <string name="error_name">Digite o nome!</string>
    <string name="error_quantity">Digite a quantidade!</string>
    <string name="error_quantity_min">O produto precisa ter pelo menos uma unidade!</string>
    <string name="error_price">Digite o preço!</string>
    <string name="error_empty_cart">Seu carrinho está vazio!</string>
    <string name="error_empty_list">Sua lista está vazia!</string>
    <string name="error_cart_not_found">Carrinho não encontrado!</string>
    <string name="error_list_not_found">Lista não encontrada!</string>
    <string name="error_email_invalid">Ops, digite um e-mail valido!</string>
    <string name="error_connection">Ops, ocorreu um erro na comunicação com o servidor. Verifique sua conexão e tente novamente.</string>
    <string name="review_your_message">Revise sua mensagem</string>
    <string name="message_comments">\"%s\"</string>
    <string name="label_cart">Carrinho: %s</string>
    <string name="label_list">Lista: %s</string>
    <string name="correct">Corrigir</string>
    <string name="success">Sucesso!</string>
    <string name="ops">Ops!</string>
    <string name="update_profile">Atualizar perfil</string>
    <string name="messages_empty">Nenhuma mensagem ainda.</string>
    <string name="save_changes">Salvar alterações</string>
    <string name="success_quantity">Quantidade alterada!</string>
    <string name="success_delete">Produto excluído!</string>
    <string name="cart_deleted">Carrinho excluído!</string>
    <string name="list_deleted">Lista excluída!</string>
    <string name="confirm_delete">Confirma a exclusão desse produto?</string>
    <string name="confirm_delete_all">Tem certeza de que deseja apagar todos os produtos do carrinho?</string>
    <string name="confirm_delete_cart">Confirma a exclusão desse carrinho?</string>
    <string name="confirm_delete_list">Confirma a exclusão dessa lista?</string>
    <string name="result_default">%d produto%s | %d unidade%s | %s no total</string>
    <string name="share_app_text">Baixe o App Carrinho de Compras, está me ajudando muito e é 100% gratuito ;-)</string>
    <string name="feedback_subject">Feedback do aplicativo Carrinho de Compras</string>
    <string name="send_list_label">%s - App Carrinho de Compras</string>
    <string name="label_my_cart">Meu carrinho de compras:\n\n</string>
    <string name="label_my_list">Minha lista de compras:\n\n</string>
    <string name="share_cart_text">\nProduto%s: %d\nUnidade%s: %s\nValor total: %s\n\n----\nInstale você também: %s</string>
    <string name="products_details">%d produto%s e %s unidade%s</string>
    <string name="update_now">Atualizar agora</string>
    <string name="later">Depois</string>
    <string name="update_available">Lançamos uma nova versão do aplicativo, atualize para receber as novidades e correções.</string>
    <string name="update_needed">Lançamos uma nova atualização crítica, você PRECISA atualizar para continuar usando.</string>
    <string name="updated_title">Atualização disponível</string>
    <string name="updated_positive">Atualizar agora</string>
    <string name="updated_negative">Mais tarde</string>
    <string name="updated_logout">Sair do app</string>
    <string name="share_subject">Baixe o aplicativo %s</string>
    <string name="share_text">Controle sua lista de compras e seu carrinho no supermercado de forma fácil:\n\n%s</string>
    <string name="share_app">Compartilhar app</string>
    <string name="send_message">Enviar mensagem</string>
    <string name="admin_write">Admin disse:</string>
    <string name="you_write">Você disse:</string>
    <string name="subscribe_plan">Assinar plano</string>
    <string name="manage_subscribe">Gerenciar assinatura</string>
    <string name="subscribed_in">Assinado em %s</string>
    <string name="thanks">Obrigado pelo apoio!</string>
    <string name="error_unknown_send_message">Ops, ocorreu um erro ao enviar a mensagem :(</string>
    <string name="notifications_empty">Nenhuma notificação recebida ainda.</string>
    <string name="channel_updates">Atualizações de catálogo</string>
    <string name="error_icon">Ícone de erro</string>
    <string name="try_again">Tentar novamente</string>
    <string name="loading_data">Verificando conteúdo…</string>
    <string name="notification_image">Imagem da notificação</string>
    <string name="label_link">Link: %s</string>
    <string name="label_received">Recebida em %s</string>
    <string name="app_logo">Logo do aplicativo</string>
    <string name="version">Versão %s</string>
    <string name="about_app_details">Este aplicativo é independente e gratuito, não temos nenhuma fonte de receita para manter ele funcionando. Se você gosta do app, pode assinar um plano para ajudar a manter o aplicativo no ar e ainda remove os anúncios.</string>
    <string name="profile_instructions">Informe seu dados corretamente para uma melhor experiência com nosso time de suporte:</string>
    <string name="save_profile">Salvar perfil</string>
    <string name="next_version">Próxima versão</string>
    <string name="previous_version">Versão anterior</string>
    <string name="plans_message">Assinando um plano, você deixa de ver anúncios no app e ainda ajuda a manter o app funcionando.</string>
    <string name="plan_success_title">Plano ativado 😍</string>
    <string name="plan_success_body">Sua assinatura premium foi ativada com sucesso, agora basta reiniciar o app para ativar.</string>
    <string name="notification_details">Detalhes da notificação</string>
    <string name="restart_app">Reiniciar app</string>
    <string name="text_price">Preço</string>
    <string name="text_size">Gramas ou ML</string>
    <string name="button_submit">Calcular preços</string>
    <string name="label_first">Produto 1</string>
    <string name="label_second">Produto 2</string>
    <string name="erase_fields">Limpar os campos</string>
    <string name="share_message">Compare o valor de dois produtos facilmente com o aplicativo Qual Compensa</string>
    <string name="first">primeiro</string>
    <string name="second">segundo</string>
    <string name="error_empty_price">Ops… Digite o preço do produto antes calcular!</string>
    <string name="error_empty_size">Ops… Digite a quantidade do produto antes de calcular!</string>
    <string name="result_generic"><![CDATA[Preço do produto: R$ <b>%s</b> <small>(por grama/ml)</small>]]></string>
    <string name="result_percentage"><![CDATA[O <b>produto %d</b> é <b>%s</b> mais barato:]]></string>
    <string name="result_first"><![CDATA[Produto 1: %s <small>(por grama/ml)</small>]]></string>
    <string name="result_second"><![CDATA[Produto 2: %s <small>(por grama/ml)</small>]]></string>
    <string name="result_equals">O preço dos dois são equivalentes.</string>
    <string name="alert_title">Entendendo o aplicativo</string>
    <string name="alert_message">Imaginando que você está fazendo compras e vê o mesmo produto com duas embalagens diferentes, um menor e o outro maior, como saber qual saí mais em conta?\nVocê abre o aplicativo e coloca seus respectivos preços, então o app informará qual compensa mais, e qual a porcentagem dessa diferença entre eles.</string>
    <string name="alert_button">OK, vamos lá!</string>
    <string name="confirmation_message">Tem certeza que deseja limpar os campos?</string>
    <string name="error_load_video">Ops, o vídeo não carregou 😭</string>
    <string name="watch_to_by_title">Assistir vídeo</string>
</resources>