<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.MainActivity">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search_products"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_new"
        android:icon="@drawable/ic_playlist_plus"
        android:title="@string/new_list"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_send"
        android:icon="@drawable/ic_share"
        android:title="@string/send_list"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_clear"
        android:icon="@drawable/ic_delete"
        android:title="@string/clear_list"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_history"
        android:icon="@drawable/ic_history"
        android:title="@string/lists_history"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_share_app"
        android:icon="@drawable/ic_share_variant_white"
        android:title="@string/share_app"
        android:orderInCategory="1"
        app:showAsAction="never" />
</menu>

